Fix missing spacing utils, update child event spacing

--- a/src/styles/utils/_flow.css
+++ b/src/styles/utils/_flow.css
@@ -6,8 +6,20 @@
   --flow-space: var(--p-space-3xs-2xs);
 }
 
-.flow-s {
+.flow-3xs {
   --flow-space: var(--p-space-3xs);
+}
+
+.flow-2xs {
+  --flow-space: var(--p-space-2xs);
+}
+
+.flow-xs {
+  --flow-space: var(--p-space-xs);
+}
+
+.flow-s {
+  --flow-space: var(--p-space-s);
 }
 
 .flow-l {
